# quinielas-ajedrez.github.io

./: .gitignore  DEPLOY.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: __init__.py  create_user.py  database.py  deps.py  evaluator.py  import_tournament.py  main.py  middleware.py  models.py  repository.py  schemas.py  table_scoring.py  yaml_parser.py
backend/routers/: admin.py  auth.py  leaderboard.py  predictions.py  tournaments.py  users.py
examples/: candidates_2026.yaml  sample_tournament.yaml
frontend/: vite.config.ts
frontend/src/: App.tsx  AuthPage.tsx  LeaderboardPage.tsx  StatisticsPage.tsx  TournamentDetail.tsx  UsersPage.tsx  api.ts
